--- a/cfp.html
+++ b/cfp.html
@@ -146,12 +146,30 @@ Springer LNCS web site</a>.</p>
 
 <h3>Program Co-chairs</h3>
 <table class="list">
-  <tr><td><a href="mailto:michal.palka@chalmers.se">Michał Pałka</a>,</td><td>Chalmers University of Technology, Sweden</td></tr>
-  <tr><td><a href="mailto:myreen@chalmers.se">Magnus Myreen</a>,</td><td>Chalmers University of Technology, Sweden</td></tr>
+  <tr><td><a href="mailto:michal.palka@chalmers.se">Michał Pałka</a>,</td><td>Chalmers University of Technology (SE)</td></tr>
+  <tr><td><a href="mailto:myreen@chalmers.se">Magnus Myreen</a>,</td><td>Chalmers University of Technology (SE)</td></tr>
 </table>
 
 <h3>Program Committee</h3>
-TBA
+<table class="list">
+  <tr><td>Soichiro Hidaka,</td>              <td>Hosei University (JP)</td></tr>
+  <tr><td>Meng Wang,</td>                    <td>University of Bristol (UK)</td></tr>
+  <tr><td>Sam Tobin-Hochstadt,</td>          <td>Indiana University Bloomington (US)</td></tr>
+  <tr><td>Tiark Rompf,</td>                  <td>Purdue University (US)</td></tr>
+  <tr><td>Patricia Johann,</td>              <td>Appalachian State University (US)</td></tr>
+  <tr><td>Neil Sculthorpe,</td>              <td>Nottingham Trent University (UK)</td></tr>
+  <tr><td>Andres Löh,</td>                   <td>Well-Typed LLP (UK)</td></tr>
+  <tr><td>Tarmo Uustalu,</td>                <td>Tallinn University of Technology (EE)</td></tr>
+  <tr><td>Cosmin E. Oancea,</td>             <td>University of Copenhagen (DK)</td></tr>
+  <tr><td>Mauro Jaskelioff,</td>             <td>Universidad Nacional de Rosario (AR)</td></tr>
+  <tr><td>Peter Achten,</td>                 <td>Radboud University (NL)</td></tr>
+  <tr><td>Dimitrios Vytiniotis,</td>         <td>Microsoft Research (UK)</td></tr>
+  <tr><td>Alberto Pardo,</td>                <td>Universidad de la República (UY)</td></tr>
+  <tr><td>Natalia Chechina,</td>             <td>University of Glasgow (UK)</td></tr>
+  <tr><td>Peter Sestoft,</td>                <td>IT University of Copenhagen (DK)</td></tr>
+  <tr><td>Scott Owens,</td>                  <td>University of Kent (UK)</td></tr>
+</table>
+
 
 
 </div></article>
