Add link to EasyChair

--- a/cfp.html
+++ b/cfp.html
@@ -105,7 +105,9 @@ prizes.</p>
 
 <h2>Paper Submissions</h2>
 
-<p>We use EasyChair for the refereeing process. The link to the submission page will be available here.</p>
+<p>We use EasyChair for the refereeing process. Papers must be submitted at:</p>
+
+<p style="margin-left: 40px"><a href="https://easychair.org/conferences/?conf=tfp2018">https://easychair.org/conferences/?conf=tfp2018</a>.</p>
 
 <p>Authors of papers have the choice of having their contributions formally
 reviewed either before or after the Symposium.</p>
