Add ICT AoA as sponsor

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@ TBA
     </tbody>
   </table>
 
+<h2>Sponsors</h2>
+<a href="https://www.chalmers.se/en/areas-of-advance/ict/Pages/default.aspx"><img src="AOA_ICT_blue-transp.png" width=340/></a>
+
 <h2>About Gothenburg</h2>
 
 <iframe src="https://player.vimeo.com/video/109809157" width="790" height="444" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
