--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@ TBA
 <table class="dates">
     <tbody>
       <tr><td>Submission for formal review (pre-symposium review):</td>          <td>March 26, 2018</td></tr>
-      <tr><td>Submission of draft papers (post-symposium review):</td>           <td>April 26, 2018</td></tr>
-      <tr><td>Notification (both pre- and post-symposium review):</td>           <td>May 3, 2018</td></tr>
+      <tr><td>Submission of draft papers (post-symposium review):</td>           <td><s>April 26, 2018</s><br><b>May 11, 2018</b></td></tr>
+      <tr><td>Notification (pre-symposium review):</td>                          <td>May 3, 2018</td></tr>
+      <tr><td>Notification (post-symposium review):</td>                         <td><s>May 3, 2018</s><br><b>May 13, 2018</b></td></tr>
       <tr><td>Registration:</td>                                                 <td>June 3, 2018</td></tr>
       <tr><td>TFP Symposium:</td>                                                <td>June 11-13, 2018</td></tr>
       <tr><td>TFPIE Workshop:</td>                                               <td>June 14, 2018</td></tr>
