Add accepted contributions

--- a/program.html
+++ b/program.html
@@ -19,7 +19,26 @@
 <article><div class="content">
 <h1>Program</h1>
 
-TBA
+<h2>Accepted contributions</h2>
+
+<ul>
+<li>Martin Handley and Graham Hutton. <span class="paper-title">Improving Haskell</span></li>
+<li>Jesús López-González and Juan Manuel Serrano. <span class="paper-title">Towards Optic-Based Algebraic Theories: the Case of Lenses</span></li>
+<li>Paul Keir, Andrew Gozillon and Hossein Haeri. <span class="paper-title">Intrinsic Currying for C++ Template Metaprograms</span></li>
+<li>Marco T. Morazan and Shamil Dzhatdoyev. <span class="paper-title">On Optimizing Bignum Multiplication</span></li>
+<li>Anders Kiel Hovgaard, Troels Henriksen and Martin Elsman. <span class="paper-title">Research Paper: High-performance defunctionalization in Futhark</span></li>
+<li>Youyou Cong and Kenichi Asai. <span class="paper-title">Shifting and Resetting in the Calculus of Constructions</span></li>
+<li>Maximilian Algehed, Sólrún Halla Einarsdóttir, Alex Gerdes and Patrik Jansson. <span class="paper-title">Type Safe Interpreters for Free</span></li>
+<li>Shigeki Suwa, Hiroaki Fukuda and Isao Sasano. <span class="paper-title">Liquid: A concurrent calculus with declaring first-order asynchronous functions</span></li>
+<li>Anna Bolotina and Artem Pelenitsyn. <span class="paper-title">Handling Recursion in Generic Programming Using Closed Type Families</span></li>
+<li>Evgenij Belikov, Hans-Wolfgang Loidl and Greg Michaelson. <span class="paper-title">Colocation of Potential Parallelism in a Distributed Adaptive Run-time System for Parallel Haskell</span></li>
+<li>Lukas Immanuel Schiller. <span class="paper-title">Strategic Skeleton Composition with Location Aware Remote Data</span></li>
+<li>Nikita Frolov. <span class="paper-title">Inductive type refinement by conjugate hylomorphisms</span></li>
+<li>Folkert de Vries and Jorge A. <span class="paper-title">Pérez. Reversible Choreographies in Haskell</span></li>
+<li>Gregor Ulm, Emil Gustavsson and Mats Jirstrand. <span class="paper-title">Active-Code Reloading in the OODIDA Platform</span></li>
+<li>Adam Barwell and Kevin Hammond. <span class="paper-title">Folds, Unfolds, and Metaheuristics: Towards Automatic Rewriting and Derivation of Metaheuristics</span></li>
+<li>Robert Stewart, Evgenij Belikov and Hans-Wolfgang Loidl. <span class="paper-title">Graph Reduction Hardware Revisited</span></li>
+</ul>
 
 </div></article>
 <footer style="text-align:center;">
