--- a/program.html
+++ b/program.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>TFP 2018: Accepted contributions</title>
+<title>TFP 2018: Accepted Contributions</title>
 <link rel="stylesheet" href="main.css">
 </head>
 <body>
 <nav>
 <ul>
 <li><a href="index.html"><strong>TFP 2018</strong></a></li>
-<li><a href="program.html">Accepted contributions</a></li>
+<li><a href="program.html">Accepted Contributions</a></li>
 <li><a href="cfp.html">Call for Papers</a></li>
 <li><a href="registration.html">Registration</a></li>
 <li><a href="venue.html">Local Information</a></li>
