--- a/cfp.html
+++ b/cfp.html
@@ -12,6 +12,7 @@
 <li><a href="program.html">Program</a></li>
 <li><a href="cfp.html">Call for Papers</a></li>
 <li><a href="registration.html">Registration</a></li>
+<li><a href="excursion.html">Social Dinner</a></li>
 <li><a href="venue.html">Local Information</a></li>
 </ul>
 
