--- a/excursion.html
+++ b/excursion.html
@@ -9,7 +9,7 @@
 <nav>
 <ul>
 <li><a href="index.html"><strong>TFP 2018</strong></a></li>
-<li><a href="program.html">Program</a></li>
+<li><a href="program.html">Accepted Contributions</a></li>
 <li><a href="cfp.html">Call for Papers</a></li>
 <li><a href="registration.html">Registration</a></li>
 <li><a href="excursion.html">Social Dinner</a></li>
