Fix typo in registration

--- a/registration.html
+++ b/registration.html
@@ -46,7 +46,7 @@ Please read the notice on taxation rules below.
 
 Please use the one of the following registration links depending on your status:
 <ul>
-<li><a href="http://www.trippus.net/TFP2018delegate">Registration individuals backed by organisations</a></li>
+<li><a href="http://www.trippus.net/TFP2018delegate">Registration for individuals backed by organisations</a></li>
 <li><a href="http://www.trippus.net/TFP2018Student">Registration for students</a></li>
 <li><a href="http://www.trippus.net/TFP2018Private">Registration for private individuals</a></li>
 </ul>
