Add registration deadline to the page

--- a/registration.html
+++ b/registration.html
@@ -51,6 +51,7 @@ Please use the one of the following registration links depending on your status:
 <li><a href="http://www.trippus.net/TFP2018Private">Registration for private individuals</a></li>
 </ul>
 
+The registration deadline is June 3, 2018.
 
 </div></article>
 <footer style="text-align:center;">
