Add programme (remove accepted contributions)

--- a/program.html
+++ b/program.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>TFP 2018: Accepted Contributions</title>
+<title>TFP 2018: Programme</title>
 <link rel="stylesheet" href="main.css">
 </head>
 <body>
 <nav>
 <ul>
 <li><a href="index.html"><strong>TFP 2018</strong></a></li>
-<li><a href="program.html">Accepted Contributions</a></li>
+<li><a href="program.html">Programme</a></li>
 <li><a href="cfp.html">Call for Papers</a></li>
 <li><a href="registration.html">Registration</a></li>
 <li><a href="excursion.html">Social Dinner</a></li>
@@ -18,26 +18,174 @@
 
 </nav>
 <article><div class="content">
-<h1>Accepted contributions</h1>
+<h1>Programme</h1>
 
-<ul>
-<li>Martin Handley and Graham Hutton. <span class="paper-title">Improving Haskell</span></li>
-<li>Jesús López-González and Juan Manuel Serrano. <span class="paper-title">Towards Optic-Based Algebraic Theories: the Case of Lenses</span></li>
-<li>Paul Keir, Andrew Gozillon and Hossein Haeri. <span class="paper-title">Intrinsic Currying for C++ Template Metaprograms</span></li>
-<li>Marco T. Morazan and Shamil Dzhatdoyev. <span class="paper-title">On Optimizing Bignum Multiplication</span></li>
-<li>Anders Kiel Hovgaard, Troels Henriksen and Martin Elsman. <span class="paper-title">High-performance defunctionalization in Futhark</span></li>
-<li>Youyou Cong and Kenichi Asai. <span class="paper-title">Shifting and Resetting in the Calculus of Constructions</span></li>
-<li>Maximilian Algehed, Sólrún Halla Einarsdóttir, Alex Gerdes and Patrik Jansson. <span class="paper-title">Type Safe Interpreters for Free</span></li>
-<li>Shigeki Suwa, Hiroaki Fukuda and Isao Sasano. <span class="paper-title">Liquid: A concurrent calculus with declaring first-order asynchronous functions</span></li>
-<li>Anna Bolotina and Artem Pelenitsyn. <span class="paper-title">Handling Recursion in Generic Programming Using Closed Type Families</span></li>
-<li>Evgenij Belikov, Hans-Wolfgang Loidl and Greg Michaelson. <span class="paper-title">Colocation of Potential Parallelism in a Distributed Adaptive Run-time System for Parallel Haskell</span></li>
-<li>Lukas Immanuel Schiller. <span class="paper-title">Strategic Skeleton Composition with Location Aware Remote Data</span></li>
-<li>Nikita Frolov. <span class="paper-title">Inductive type refinement by conjugate hylomorphisms</span></li>
-<li>Folkert de Vries and Jorge A. <span class="paper-title">Pérez. Reversible Choreographies in Haskell</span></li>
-<li>Gregor Ulm, Emil Gustavsson and Mats Jirstrand. <span class="paper-title">Active-Code Reloading in the OODIDA Platform</span></li>
-<li>Adam Barwell and Kevin Hammond. <span class="paper-title">Folds, Unfolds, and Metaheuristics: Towards Automatic Rewriting and Derivation of Metaheuristics</span></li>
-<li>Robert Stewart, Evgenij Belikov and Hans-Wolfgang Loidl. <span class="paper-title">Graph Reduction Hardware Revisited</span></li>
-</ul>
+<h2>Monday: 11 June</h2>
+
+<div class=session-head>
+<span class=schedule-time>9:20&mdash;9:30:</span> Opening<br/>
+</div>
+
+
+<div class=session-head>
+<span class=schedule-time>9:30&mdash;10:30:</span> Invited talk
+</div>
+
+
+<div class=session-head>
+<span class=schedule-time>10:30&mdash;11:00:</span> Break
+</div>
+
+
+<div class=session-head>
+<span class=schedule-time>11:00&mdash;12:00</span>
+</div>
+
+<div class=session-paper>
+<span class=paper-title-s>Liquid: A concurrent calculus with declaring first-order asynchronous functions,</span> <span class=paper-authors>Shigeki Suwa, Hiroaki Fukuda and Isao Sasano</span>
+</div>
+<div class=session-paper>
+<span class=paper-title-s>Shifting and Resetting in the Calculus of Constructions,</span> <span class=paper-authors>Youyou Cong and Kenichi Asai</span>
+</div>
+
+
+<div class=session-head>
+<span class=schedule-time>12:00&mdash;13:30:</span> Lunch
+</div>
+
+<div class=session-paper>
+<span class=schedule-time>13:30&mdash;14:30</span><br/>
+</div>
+<div class=session-paper>
+<span class=paper-title-s>Colocation of Potential Parallelism in a Distributed Adaptive Run-time System for Parallel Haskell,</span> <span class=paper-authors>Evgenij Belikov, Hans-Wolfgang Loidl and Greg Michaelson</span>
+</div>
+<div class=session-paper>
+<span class=paper-title-s>Reversible Choreographies in Haskell,</span> <span class=paper-authors>Folkert de Vries and Jorge A. Pérez</span>
+</div>
+
+
+<div class=session-head>
+<span class=schedule-time>14:30&mdash;16:00:</span> Break
+</div>
+
+
+<div class=session-paper>
+<span class=schedule-time>16:00&mdash;17:00</span><br/>
+</div>
+<div class=session-paper>
+<span class=paper-title-s>Intrinsic Currying for C++ Template Metaprograms,</span> <span class=paper-authors>Paul Keir, Andrew Gozillon and Hossein Haeri</span>
+</div>
+<div class=session-paper>
+<span class=paper-title-s>On Optimizing Bignum Multiplication,</span> <span class=paper-authors>Marco T. Morazan and Shamil Dzhatdoyev</span>
+</div>
+
+
+<h2>Tuesday: 12 June</h2>
+
+
+<div class=session-head>
+<span class=schedule-time>9:30&mdash;10:30</span>
+</div>
+
+<div class=session-paper>
+<span class=paper-title-s>Active-Code Reloading in the OODIDA Platform,</span> <span class=paper-authors>Gregor Ulm, Emil Gustavsson and Mats Jirstrand</span>
+</div>
+<div class=session-paper>
+<span class=paper-title-s>Towards Optic-Based Algebraic Theories: the Case of Lenses,</span> <span class=paper-authors>Jesús López-González and Juan Manuel Serrano</span>
+</div>
+
+
+<div class=session-head>
+<span class=schedule-time>10:30&mdash;11:00:</span> Break
+</div>
+
+
+<div class=session-head>
+<span class=schedule-time>11:00&mdash;12:00</span>
+</div>
+
+<div class=session-paper>
+<span class=paper-title-s>Type Safe Interpreters for Free,</span> <span class=paper-authors>Maximilian Algehed, Sólrún Halla Einarsdóttir, Alex Gerdes and Patrik Jansson</span>
+</div>
+<div class=session-paper>
+<span class=paper-title-s>Handling Recursion in Generic Programming Using Closed Type Families,</span> <span class=paper-authors>Anna Bolotina and Artem Pelenitsyn</span>
+</div>
+
+
+<div class=session-head>
+<span class=schedule-time>12:00&mdash;13:30:</span> Lunch
+</div>
+
+
+<div class=session-head>
+<span class=schedule-time>18:00&mdash;22:00:</span> <b>Social dinner</b>
+</div>
+
+
+
+<h2>Wednesday: 13 June</h2>
+
+
+<div class=session-head>
+<span class=schedule-time>9:30&mdash;10:30:</span> Invited talk
+</div>
+
+
+<div class=session-head>
+<span class=schedule-time>10:30&mdash;11:00:</span> Break
+</div>
+
+
+<div class=session-head>
+<span class=schedule-time>11:00&mdash;12:00</span>
+</div>
+
+<div class=session-paper>
+<span class=paper-title-s>Inductive type refinement by conjugate hylomorphisms,</span> <span class=paper-authors>Nikita Frolov</span>
+</div>
+<div class=session-paper>
+<span class=paper-title-s>Folds, Unfolds, and Metaheuristics: Towards Automatic Rewriting and Derivation of Metaheuristics,</span> <span class=paper-authors>Adam Barwell and Kevin Hammond</span>
+</div>
+
+
+<div class=session-head>
+<span class=schedule-time>12:00&mdash;13:30:</span> Lunch
+</div>
+
+<div class=session-paper>
+<span class=schedule-time>13:30&mdash;14:30</span><br/>
+</div>
+<div class=session-paper>
+<span class=paper-title-s>Improving Haskell,</span> <span class=paper-authors>Martin Handley and Graham Hutton</span>
+</div>
+<div class=session-paper>
+<span class=paper-title-s>Graph Reduction Hardware Revisited,</span> <span class=paper-authors>Robert Stewart, Evgenij Belikov and Hans-Wolfgang Loidl</span>
+</div>
+
+
+<div class=session-head>
+<span class=schedule-time>14:30&mdash;15:00:</span> Break
+</div>
+
+
+<div class=session-paper>
+<span class=schedule-time>15:00&mdash;16:00</span><br/>
+</div>
+<div class=session-paper>
+<span class=paper-title-s>High-performance defunctionalization in Futhark,</span> <span class=paper-authors>Anders Kiel Hovgaard, Troels Henriksen and Martin Elsman</span>
+</div>
+<div class=session-paper>
+<span class=paper-title-s>Strategic Skeleton Composition with Location Aware Remote Data,</span> <span class=paper-authors>Lukas Immanuel Schiller</span>
+</div>
+
+
+<div class=session-head>
+<span class=schedule-time>16:00&mdash;16:10:</span> Closing remarks
+</div>
+
+
+
+<h2>Thursday, 14 June: <a href="http://www.ccs.neu.edu/home/heather/tfpie2018/">TFPIE</a></h2>
 
 </div></article>
 <footer style="text-align:center;">
