--- a/program.html
+++ b/program.html
@@ -20,7 +20,7 @@
 <article><div class="content">
 <h1>Programme</h1>
 
-<h2>Monday: 11 June</h2>
+<h2>Monday, 11 June</h2>
 
 <div class=session-head>
 <span class=schedule-time>9:20&mdash;9:30:</span> Opening<br/>
@@ -80,7 +80,7 @@
 </div>
 
 
-<h2>Tuesday: 12 June</h2>
+<h2>Tuesday, 12 June</h2>
 
 
 <div class=session-head>
@@ -123,7 +123,7 @@
 
 
 
-<h2>Wednesday: 13 June</h2>
+<h2>Wednesday, 13 June</h2>
 
 
 <div class=session-head>
