--- a/venue.html
+++ b/venue.html
@@ -21,11 +21,15 @@
 <h1>Local information</h1>
 
 <h2>Venue location</h2>
-<p> The events will take place at the <a href="https://www.chalmers.se/en/about-chalmers/premises-and-campus/Pages/find-your-way-to-chalmers.aspx">
+<p> The events will take place in <strong>room EA</strong> in the <strong>EDIT building</strong> at the <a href="https://www.chalmers.se/en/about-chalmers/premises-and-campus/Pages/find-your-way-to-chalmers.aspx">
 Chalmers Campus Johanneberg</a>.</p>
+<div style="margin: auto; text-align: center;">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2132.626971513628!2d11.975934515585621!3d57.6888172484919!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464ff36b628efec3%3A0xc148ed83d6f0a03!2sChalmers+Tekniska+H%C3%B6gskola!5e0!3m2!1ssv!2sse!4v1512595970491" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
 
-
+<p>
+The exact location of <strong>room EA</strong> and the <strong>EDIT building</strong> can be found on <a href="https://maps.chalmers.se/#b9c89c7c-b553-488c-b09e-d2c41f5e6259">this map</a>. The building can be accessed through entrances marked by numbers <strong>8</strong> and <strong>11</strong>.
+</p>
 
 <h2>Getting to Gothenburg</h2>
 
