--- a/registration.html
+++ b/registration.html
@@ -44,6 +44,8 @@ Please read the notice on taxation rules below.
 
 <h2>Registration links</h2>
 
+
+<!--
 Please use the one of the following registration links depending on your status:
 <ul>
 <li><a href="http://www.trippus.net/TFP2018delegate">Registration for individuals backed by organisations</a></li>
@@ -51,7 +53,9 @@ Please use the one of the following registration links depending on your status:
 <li><a href="http://www.trippus.net/TFP2018Private">Registration for private individuals</a></li>
 </ul>
 
-The registration deadline is June 3, 2018.
+-->
+
+The registration deadline is June 3, 2018–registration is closed.
 
 </div></article>
 <footer style="text-align:center;">
