Add Alex as session chair

--- a/program.html
+++ b/program.html
@@ -64,7 +64,7 @@ work.
 </div>
 
 <div class=session-paper>
-<span class=schedule-time>13:30&mdash;14:30</span><br/>
+<span class=schedule-time>13:30&mdash;14:30</span> Session chair: Alex Gerdes<br/>
 </div>
 <div class=session-paper>
 <span class=paper-title-s>Colocation of Potential Parallelism in a Distributed Adaptive Run-time System for Parallel Haskell,</span> <span class=paper-authors>Evgenij Belikov, Hans-Wolfgang Loidl and Greg Michaelson</span>
