Add HaWo to session chairs

--- a/program.html
+++ b/program.html
@@ -80,7 +80,7 @@ work.
 
 
 <div class=session-paper>
-<span class=schedule-time>16:00&mdash;17:00</span><br/>
+<span class=schedule-time>16:00&mdash;17:00</span> Session chair: Hans-Wolfgang Loidl<br/>
 </div>
 <div class=session-paper>
 <span class=paper-title-s>Intrinsic Currying for C++ Template Metaprograms,</span> <span class=paper-authors>Paul Keir, Andrew Gozillon and Hossein Haeri</span>
