--- a/program.html
+++ b/program.html
@@ -48,7 +48,7 @@ work.
 
 
 <div class=session-head>
-<span class=schedule-time>11:00&mdash;12:00</span>
+<span class=schedule-time>11:00&mdash;12:00:</span> Session chair: Neel Krishnaswami
 </div>
 
 <div class=session-paper>
@@ -64,7 +64,7 @@ work.
 </div>
 
 <div class=session-paper>
-<span class=schedule-time>13:30&mdash;14:30</span> Session chair: Alex Gerdes<br/>
+<span class=schedule-time>13:30&mdash;14:30:</span> Session chair: Alex Gerdes<br/>
 </div>
 <div class=session-paper>
 <span class=paper-title-s>Colocation of Potential Parallelism in a Distributed Adaptive Run-time System for Parallel Haskell,</span> <span class=paper-authors>Evgenij Belikov, Hans-Wolfgang Loidl and Greg Michaelson</span>
@@ -80,7 +80,7 @@ work.
 
 
 <div class=session-paper>
-<span class=schedule-time>16:00&mdash;17:00</span> Session chair: Hans-Wolfgang Loidl<br/>
+<span class=schedule-time>16:00&mdash;17:00:</span> Session chair: Hans-Wolfgang Loidl<br/>
 </div>
 <div class=session-paper>
 <span class=paper-title-s>Intrinsic Currying for C++ Template Metaprograms,</span> <span class=paper-authors>Paul Keir, Andrew Gozillon and Hossein Haeri</span>
@@ -94,7 +94,7 @@ work.
 
 
 <div class=session-head>
-<span class=schedule-time>9:30&mdash;10:30</span> Session chair: Patrik Jansson
+<span class=schedule-time>9:30&mdash;10:30:</span> Session chair: Patrik Jansson
 </div>
 
 <div class=session-paper>
@@ -111,7 +111,7 @@ work.
 
 
 <div class=session-head>
-<span class=schedule-time>11:00&mdash;12:00</span> Session chair: Simon Thompson
+<span class=schedule-time>11:00&mdash;12:00:</span> Session chair: Simon Thompson
 </div>
 
 <div class=session-paper>
@@ -160,7 +160,7 @@ programming.
 
 
 <div class=session-head>
-<span class=schedule-time>11:00&mdash;12:00</span>
+<span class=schedule-time>11:00&mdash;12:00:</span> Session chair: Marco T. Morazan
 </div>
 
 <div class=session-paper>
@@ -176,7 +176,7 @@ programming.
 </div>
 
 <div class=session-paper>
-<span class=schedule-time>13:30&mdash;14:30</span> Session chair: Peter Achten<br/>
+<span class=schedule-time>13:30&mdash;14:30:</span> Session chair: Peter Achten<br/>
 </div>
 <div class=session-paper>
 <span class=paper-title-s>Improving Haskell,</span> <span class=paper-authors>Martin Handley and Graham Hutton</span>
@@ -192,7 +192,7 @@ programming.
 
 
 <div class=session-paper>
-<span class=schedule-time>15:00&mdash;16:00</span><br/>
+<span class=schedule-time>15:00&mdash;16:00:</span> Session chair: Magnus Myreen<br/>
 </div>
 <div class=session-paper>
 <span class=paper-title-s>High-performance defunctionalization in Futhark,</span> <span class=paper-authors>Anders Kiel Hovgaard, Troels Henriksen and Martin Elsman</span>
