--- a/excursion.html
+++ b/excursion.html
@@ -22,11 +22,12 @@
 
 <h2>Cruise Schedule: Tuesday 12 June </h2>
 <ul>
-<li>18:00 &nbsp Departure from Lilla Bommen (city center)</li>
-<li>22:00 &nbsp Arrival in Lilla Bommen</li>
+<li>17:45 &nbsp Gathering at Lilla Bommens Hamn (city center)</li>
+<li>18:00 &nbsp Departure from Lilla Bommens Hamn</li>
+<li>22:00 &nbsp Arrival in Lilla Bommens Hamn</li>
 </ul>
 
-<p> <img src="Archipelago.jpg" style="width: 50%; float:right; padding-left:15px;">
+<p> <img src="Archipelago.jpg" style="width: 50%; float:right; padding:15px;">
 
 The four hour boat cruise around the island of
 <a href="https://en.wikipedia.org/wiki/Hisingen">Hisingen</a>
@@ -34,7 +35,13 @@ will include a dinner and a guided tour. The cruise will pass through
 the Gothenburg's archipelago, as well as the rivers Göta älv and Nordre älv.
 </p>
 
-<div style="height: 200px;"></div>
+<p>
+The following map shows the location where the cruise starts and ends.
+</p>
+
+<div style="margin: auto; text-align: center;">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8525.735692146813!2d11.973114730711654!3d57.70908667064448!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464ff3610ab61401%3A0x8755b72283d5ac25!2sLilla+Bommens+Hamn!5e0!3m2!1sen!2sse!4v1528459306929" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
 
 </div></article>
 <footer style="text-align:center;">
