Fix slides and change tense to present

--- a/excursion.html
+++ b/excursion.html
@@ -31,7 +31,7 @@
 
 The four hour boat cruise around the island of
 <a href="https://en.wikipedia.org/wiki/Hisingen">Hisingen</a>
-will include a dinner and a guided tour. The cruise will pass through
+includes a dinner and a guided tour. The cruise will pass through
 the Gothenburg's archipelago, as well as the rivers Göta älv and Nordre älv.
 </p>
 
