--- a/program.html
+++ b/program.html
@@ -31,7 +31,7 @@
 <span class=schedule-time>9:30&mdash;10:30:</span> Invited talk
 </div>
 <div class=session-paper>
-<span class=paper-title-s2><a href="Simon_Thompson_talk.pdf">Refactoring reflected</a>,</span> <span class=paper-authors>Simon Thompson</span>
+<span class=paper-title-s2><a href="slides/Simon_Thompson.pdf">Refactoring reflected</a>,</span> <span class=paper-authors>Simon Thompson</span>
 <span class=abstract>
 The team at Kent have built tools for refactoring programs in Haskell, Erlang
 and, most recently, OCaml. This talk will reflect on what we have learned in
@@ -55,7 +55,7 @@ work.
 <span class=paper-title-s>Liquid: A concurrent calculus with declaring first-order asynchronous functions,</span> <span class=paper-authors>Shigeki Suwa, Hiroaki Fukuda and Isao Sasano</span>
 </div>
 <div class=session-paper>
-<span class=paper-title-s>Shifting and Resetting in the Calculus of Constructions,</span> <span class=paper-authors>Youyou Cong and Kenichi Asai</span>
+<span class=paper-title-s><a href="slides/Youyou_Cong.pdf">Shifting and Resetting in the Calculus of Constructions</a>,</span> <span class=paper-authors>Youyou Cong and Kenichi Asai</span>
 </div>
 
 
@@ -83,7 +83,7 @@ work.
 <span class=schedule-time>16:00&mdash;17:00:</span> Session chair: Hans-Wolfgang Loidl<br/>
 </div>
 <div class=session-paper>
-<span class=paper-title-s>Intrinsic Currying for C++ Template Metaprograms (reviewed paper),</span> <span class=paper-authors>Paul Keir, Andrew Gozillon and Hossein Haeri</span>
+<span class=paper-title-s><a href="slides/Paul_Keir.pdf">Intrinsic Currying for C++ Template Metaprograms (reviewed paper)</a>,</span> <span class=paper-authors>Paul Keir, Andrew Gozillon and Hossein Haeri</span>
 </div>
 <div class=session-paper>
 <span class=paper-title-s>On Optimizing Bignum Multiplication,</span> <span class=paper-authors>Marco T. Morazan and Shamil Dzhatdoyev</span>
@@ -98,10 +98,10 @@ work.
 </div>
 
 <div class=session-paper>
-<span class=paper-title-s>Active-Code Reloading in the OODIDA Platform,</span> <span class=paper-authors>Gregor Ulm, Emil Gustavsson and Mats Jirstrand</span>
+<span class=paper-title-s><a href="slides/Gregor_Ulm.pdf">Active-Code Reloading in the OODIDA Platform</a>,</span> <span class=paper-authors>Gregor Ulm, Emil Gustavsson and Mats Jirstrand</span>
 </div>
 <div class=session-paper>
-<span class=paper-title-s>Towards Optic-Based Algebraic Theories: the Case of Lenses (reviewed paper),</span> <span class=paper-authors>Jesús López-González and Juan Manuel Serrano</span>
+<span class=paper-title-s><a href="https://docs.google.com/presentation/d/18a7uNM3qPTsAumWlk0cnQ12OTirdEz18cpEBTITbmTc/edit?usp=sharing">Towards Optic-Based Algebraic Theories: the Case of Lenses (reviewed paper)</a>,</span> <span class=paper-authors>Jesús López-González and Juan Manuel Serrano</span>
 </div>
 
 
@@ -115,10 +115,10 @@ work.
 </div>
 
 <div class=session-paper>
-<span class=paper-title-s>Type Safe Interpreters for Free,</span> <span class=paper-authors>Maximilian Algehed, Sólrún Halla Einarsdóttir, Alex Gerdes and Patrik Jansson</span>
+<span class=paper-title-s><a href="slides/Patrik_Jansson.pdf">Type Safe Interpreters for Free</a>,</span> <span class=paper-authors>Maximilian Algehed, Sólrún Halla Einarsdóttir, Alex Gerdes and Patrik Jansson</span>
 </div>
 <div class=session-paper>
-<span class=paper-title-s>Handling Recursion in Generic Programming Using Closed Type Families,</span> <span class=paper-authors>Anna Bolotina and Artem Pelenitsyn</span>
+<span class=paper-title-s><a href="slides/Anna_Bolotina.pdf">Handling Recursion in Generic Programming Using Closed Type Families</a>,</span> <span class=paper-authors>Anna Bolotina and Artem Pelenitsyn</span>
 </div>
 
 
@@ -179,7 +179,7 @@ programming.
 <span class=schedule-time>13:30&mdash;14:30:</span> Session chair: Peter Achten<br/>
 </div>
 <div class=session-paper>
-<span class=paper-title-s>Improving Haskell (reviewed paper),</span> <span class=paper-authors>Martin Handley and Graham Hutton</span>
+<span class=paper-title-s><a href="slides/Martin_Handley.pdf">Improving Haskell (reviewed paper)</a>,</span> <span class=paper-authors>Martin Handley and Graham Hutton</span>
 </div>
 <div class=session-paper>
 <span class=paper-title-s>Graph Reduction Hardware Revisited,</span> <span class=paper-authors>Robert Stewart, Evgenij Belikov and Hans-Wolfgang Loidl</span>
@@ -195,7 +195,7 @@ programming.
 <span class=schedule-time>15:00&mdash;16:00:</span> Session chair: Magnus Myreen<br/>
 </div>
 <div class=session-paper>
-<span class=paper-title-s>High-performance defunctionalization in Futhark,</span> <span class=paper-authors>Anders Kiel Hovgaard, Troels Henriksen and Martin Elsman</span>
+<span class=paper-title-s><a href="slides/Anders_Kiel_Hovgaard.pdf">High-performance defunctionalization in Futhark</a>,</span> <span class=paper-authors>Anders Kiel Hovgaard, Troels Henriksen and Martin Elsman</span>
 </div>
 <div class=session-paper>
 <span class=paper-title-s>Strategic Skeleton Composition with Location Aware Remote Data,</span> <span class=paper-authors>Lukas Immanuel Schiller</span>
