Push the post-symposium submission dates forward by 10 days

--- a/cfp.html
+++ b/cfp.html
@@ -24,15 +24,15 @@
 <table class="dates">
     <tbody>
       <tr><td>Submission for formal review (pre-symposium review):</td>          <td>March 26, 2018</td></tr>
-      <tr><td>Submission of draft papers (post-symposium review):</td>           <td><s>April 26, 2018</s><br><b>May 11, 2018</b></td></tr>
+      <tr><td>Submission of draft papers (post-symposium review):</td>           <td><s>April 26, 2018</s><br/><b>May 11, 2018</b></td></tr>
       <tr><td>Notification (pre-symposium review):</td>                          <td>May 3, 2018</td></tr>
-      <tr><td>Notification (post-symposium review):</td>                         <td><s>May 3, 2018</s><br><b>May 13, 2018</b></td></tr>
+      <tr><td>Notification (post-symposium review):</td>                         <td><s>May 3, 2018</s><br/><b>May 13, 2018</b></td></tr>
       <tr><td>Registration:</td>                                                 <td>June 3, 2018</td></tr>
       <tr><td>TFP Symposium:</td>                                                <td>June 11-13, 2018</td></tr>
       <tr><td>TFPIE Workshop:</td>                                               <td>June 14, 2018</td></tr>
       <tr><td>Student papers feedback:</td>                                      <td>June 21, 2018</td></tr>
-      <tr><td>Submission for formal review (post-symposium review):</td>         <td>August 14, 2018</td></tr>
-      <tr><td>Notification of acceptance (post-symposium review):</td>           <td>September 20, 2018</td></tr>
+      <tr><td>Submission for formal review (post-symposium review):</td>         <td><s>August 14, 2018</s><br/><b>August 24, 2018</b></td></tr>
+      <tr><td>Notification of acceptance (post-symposium review):</td>           <td><s>September 20, 2018</s><br/><b>September 30, 2018</b></td></tr>
       <tr><td>Camera-ready submission (both pre- and post-symposium review):</td><td>November 30, 2018</td></tr>
     </tbody>
   </table>
