--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@ TFP 2018 is the main event of a pair of functional programming events. TFP 2018 
 <p> The events take place at the <a href="https://www.chalmers.se/en/about-chalmers/premises-and-campus/Pages/find-your-way-to-chalmers.aspx">
 Chalmers Campus Johanneberg</a> in Gothenburg.</p>
 
+<p><strong>Update:</strong> The proceedings <a href="https://link.springer.com/book/10.1007/978-3-030-18506-0">have been published!</a></p>
+
 <h2>Dates</h2>
 
 <p>
